[package]
name = "quicksilver"
description = "A simple game framework for 2D games in pure Rust"
version = "0.3.16"
authors = ["Ryan Goldstein <ryanisaacg@gmail.com>"]
categories = ["game-engines"]
homepage = "https://ryanisaacg.github.io/quicksilver"
keywords = ["game", "audio", "graphics", "gamedev"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryanisaacg/quicksilver"
exclude = ["docs/*"]
edition = "2018"

[features]
default = ["collisions", "complex_shapes", "immi_ui", "fonts", "gamepads", "saving", "sounds"]

collisions = ["nalgebra", "ncollide2d"]
complex_shapes = ["lyon"]
fonts = ["rusttype"]
gamepads = ["gilrs"]
immi_ui = ["immi", "fonts"]
saving = ["quick-saving"]
sounds = ["rodio"]

[badges]
travis-ci = { repository = "ryanisaacg/quicksilver", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
gilrs = { version = "0.7", optional = true }
image = "0.21"
lyon = { version = "0.13", features = ["extra"], optional = true }
rand = { version = "0.6", features = ["stdweb"] }
nalgebra = { version = "0.18", features = ["stdweb"], optional = true }
ncollide2d = { version = "0.19", optional = true }
immi = { version = "1.0", optional = true }
rusttype = { version = "0.7", optional = true }
quick-fs = { git = "https://github.com/ryanisaacg/quick-fs", features = ["stdweb"] }
quick-saving = { git = "https://github.com/ryanisaacg/quick-saving", features = ["stdweb"], optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
alga = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.11"
winit = "0.20.0-alpha1"
glutin = "0.22.0-alpha1"
rodio = { version = "0.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.12"
webgl_stdweb = "0.3"

[[example]]
name = "draw-geometry"
required-features = []

[[example]]
name = "image"
required-features = []

[[example]]
name = "font"
required-features = ["fonts"]

[[example]]
name = "sound"
required-features = ["sounds"]

[[example]]
name = "raycast"
required-features = ["collisions"]

[[example]]
name = "rgb-triangle"
required-features = []

[[example]]
name = "lyon"
required-features = ["complex_shapes"]

[[example]]
name = "set-cursor"
required-features = []

[[example]]
name = "stopwatch"
required-features = []

[[example]]
name = "camera"
required-features = []

